# python4nlp

./: README.md  pyproject.toml
report/: .gitignore  Makefile  main.tex  references.bib
results/: metrics.csv  predictions.csv
src/: config.py  data.py  models.py  plot.py  run.py
