[project]
name = "python4nlp"
version = "0.1.0"
description = "Low-data emotion classification with TF-IDF and DistilBERT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "matplotlib>=3.11.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "torch>=2.13.0",
    "transformers>=5.14.1",
]
